--- a/print/my 0.15mm QUALITY.ini
+++ b/print/my 0.15mm QUALITY.ini
@@ -7,7 +7,7 @@ bridge_flow_ratio = 0.8
 bridge_speed = 30
 brim_width = 0
 clip_multipart_objects = 1
-compatible_printers = 
+compatible_printers =
 compatible_printers_condition = printer_notes=~/.*PRINTER_VENDOR_PRUSA3D.*/ and printer_notes=~/.*PRINTER_MODEL_MK3.*/ and nozzle_diameter[0]==0.4
 complete_objects = 0
 default_acceleration = 1000
@@ -39,7 +39,7 @@ infill_first = 0
 infill_only_where_needed = 0
 infill_overlap = 25%
 infill_speed = 200
-inherits = 0.15mm OPTIMAL MK3
+inherits = 0.15mm QUALITY MK3
 interface_shells = 0
 layer_height = 0.15
 max_print_speed = 200
@@ -47,7 +47,7 @@ max_volumetric_extrusion_rate_slope_negative = 0
 max_volumetric_extrusion_rate_slope_positive = 0
 max_volumetric_speed = 0
 min_skirt_length = 4
-notes = 
+notes =
 only_retract_when_crossing_perimeters = 0
 ooze_prevention = 0
 output_filename_format = {input_filename_base}_{layer_height}mm_{filament_type[0]}_{printer_model}.gcode
@@ -57,8 +57,8 @@ perimeter_extruder = 1
 perimeter_extrusion_width = 0.45
 perimeter_speed = 45
 perimeters = 2
-post_process = 
-print_settings_id = 
+post_process =
+print_settings_id =
 raft_layers = 0
 resolution = 0
 seam_position = nearest
